--- a/src/app/dashboard/my-schedule-detail/my-schedule-detail.component.css
+++ b/src/app/dashboard/my-schedule-detail/my-schedule-detail.component.css
@@ -9,6 +9,17 @@
   flex-direction: column;
   padding: 5px 10px 5px;
 }
+.e-appointment {
+  width: 100%;
+}
+.template-wrap {
+  padding: 10px 4px;
+  width: 100%;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  margin-top: 5px;
+}
 
 .quick-info-title {
   font-weight: 500;
