--- a/src/app/dashboard/schedule/schedule.component.css
+++ b/src/app/dashboard/schedule/schedule.component.css
@@ -97,21 +97,21 @@ td.e-textlabel {
   flex-direction: row;
   justify-content: space-between
 }
+.e-appointment {
+  width: 100%;
+}
 
 .template-wrap {
   padding: 10px 4px;
-  width: 100%;
   border: 1px solid #ddd;
   border-radius: 4px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  margin: 10px;
+  margin-top: 5px;
 }
-
 
 .e-schedule .e-timeline-view .e-appointment .e-appointment-details, .e-schedule .e-timeline-month-view .e-appointment .e-appointment-details {
   padding: 0;
 }
-
 
 .e-btn, .e-css.e-btn {
   background-color: #7750D4;
