--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,3 @@
-@import 'node_modules/@syncfusion/ej2-angular-popups/styles/material.css';
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -82,10 +80,6 @@ h1, h2, h3 {
   font-size: x-large;
 }
 
-h4, h5, h6 {
-  color: #001126;
-  text-transform: uppercase;
-}
 
 .icon {
   fill: #44A39D;
@@ -332,14 +326,6 @@ form#reactive {
   transition: all 0.5s ease;
 }
 
-.e-btn.e-inherit[_ngcontent-ng-c1742823034], .e-btn.e-inherit[_ngcontent-ng-c1742823034], .e-btn.e-inherit[_ngcontent-ng-c1742823034], .e-btn.e-inherit.e-active[_ngcontent-ng-c1742823034], .e-css.e-btn.e-inherit[_ngcontent-ng-c1742823034], .e-css.e-btn.e-inherit[_ngcontent-ng-c1742823034], .e-css.e-btn.e-inherit[_ngcontent-ng-c1742823034], .e-css.e-btn.e-inherit.e-active[_ngcontent-ng-c1742823034] {
-  transition: all 0.5s ease;
-}
-
-.e-tbar-btn, .e-tbtn-txt, .e-control, .e-btn e-lib {
-  transition: all 0.5s ease;
-}
-
 tbody {
   cursor: pointer;
 }
@@ -364,3 +350,12 @@ label {
   }
 }
 
+html,
+body,
+#dialog-container {
+  display: block;
+  height: 100%;
+  margin: 0;
+  overflow: hidden;
+  width: 100%;
+}
