--- a/src/app/dashboard/my-schedule-detail/my-schedule-detail.component.html
+++ b/src/app/dashboard/my-schedule-detail/my-schedule-detail.component.html
@@ -3,7 +3,7 @@
   <div class="content-wrapper">
 
     <ejs-schedule #scheduleObj
-                  timezone="Europe/Bratislava"
+                  timezone="UTC"
                   [currentView]="currentView" [endHour]='endHour' [eventSettings]="eventSettings"
                   [rowAutoHeight]='rowAutoHeight'
                   [selectedDate]="selectedDate" [startHour]='startHour' [showWeekend]="showWeekend" class="rounded-2xl" cssClass='adaptive-rows'
@@ -12,7 +12,7 @@
       <e-views>
         <e-view option="Day"></e-view>
         <e-view option="Week"></e-view>
-
+      </e-views>
         <ng-template #quickInfoTemplatesHeader let-data>
           <div class="quick-info-header">
             <div [ngStyle]="getHeaderStyles(data)" class="quick-info-header-content">
@@ -29,10 +29,10 @@
 
         <ng-template #eventSettingsTemplate let-data>
           <div [ngStyle]="{'background-color': getSubjectColor(data.subject_type)}" class="template-wrap p-4">
-            <div class="mb-2"><h6 class="mb-1">{{ data.teacher.name }}</h6></div>
+            <div class="mb-2"><h6 class="mb-1">{{ data.teacher.name }} {{data.teacher.surname}}</h6></div>
             <div class="mb-2"><h5 class="mb-1">{{ data.subject.name }}</h5></div>
             <div class="classroom-type">
-              <h6 class="mb-1">{{ data.classroom.number }}</h6>
+              <h6 class="mb-1">{{ data.classroom.code }}</h6>
               <h6>{{ data.subject.type }}</h6>
             </div>
           </div>
@@ -42,33 +42,30 @@
             <div class="event-content">
               <div class="meeting-subject-wrap">
                 <label>Teacher</label>:
-                <span>{{data.teacher.name}}</span>
+                <span>{{ data.teacher.name }} {{data.teacher.surname}}</span>
               </div>
               <div class="meeting-subject-wrap">
                 <label>Classroom</label>:
-                <span>{{data.classroom.number}}</span>
+                <span>{{data.classroom.code}}</span>
               </div>
               <div class="meeting-subject-wrap">
                 <label>Group</label>:
                 <span>{{data.group.name}}</span>
               </div>
             </div>
-            <button ejs-button class="btn btn-sm mt-2" cssClass="e-danger" (click)="deleteScheduleCell(data.id)">Delete</button>
           </div>
         </ng-template>
 
-
-      </e-views>
+      <ng-template #quickInfoTemplatesFooter let-data>
+        <ng-container [ngTemplateOutlet]="eventFooter"
+                      [ngTemplateOutletContext]="{data:data}"></ng-container>
+      </ng-template>
+      <ng-template #eventFooter let-data="data">
+        <div class="e-event-footer">
+          <button ejs-button id="delete" cssClass="e-flat e-danger" (click)="deleteScheduleCell(data.id)">Delete</button>
+        </div>
+      </ng-template>
     </ejs-schedule>
 
   </div>
 </div>
-
-
-
-
-
-
-
-
-
