--- a/src/app/dashboard/search/search.component.html
+++ b/src/app/dashboard/search/search.component.html
@@ -1,11 +1,23 @@
 <div class="flex flex-col items-center justify-center py-4">
   <div class="p-5 bg-white rounded-xl shadow-md">
     <div class="flex flex-col items-center space-y-5">
-      <ejs-dropdownlist id="types" #typeList [dataSource]="searchData" (change)="onChange1($event)" [(value)]="typeValue"
-                        [fields]="fields" popupHeight='auto' class="w-64"></ejs-dropdownlist>
-      <ejs-dropdownlist #searchList id='search' [dataSource]='data' (change)="onChange2($event)" [(value)]="searchValue"
-                        [fields]='dataFields' (filtering)='onFiltering($event)' popupHeight='auto' [enabled]='false'
-                        [allowFiltering]='true' class="w-64"></ejs-dropdownlist>
+      <ejs-dropdownlist id="types" #typeList [dataSource]="searchData" (change)="onChange1()"
+                        [(value)]="typeValue"
+                        [fields]="fields"
+                        popupHeight='auto'
+                        class="w-64">
+
+      </ejs-dropdownlist>
+      <ejs-dropdownlist #searchList id='search'
+                        [dataSource]='data'
+                        (change)="onChange2()"
+                        [(value)]="searchValue"
+                        [fields]='dataFields'
+                        ignoreAccent="true"
+                        popupHeight='auto' [enabled]='false'
+                        [allowFiltering]='true' class="w-64">
+
+      </ejs-dropdownlist>
     </div>
   </div>
 </div>
