Changing the structure of the application: new main page, alignment with dashboard, access to schedule without authorization

--- a/src/app/dashboard/header/header.component.html
+++ b/src/app/dashboard/header/header.component.html
@@ -8,14 +8,25 @@
 
           <div class="e-appbar-spacer"></div>
           <div class="flex gap-5">
-            <ng-container *ngFor="let item of scheduleItems">
-              <button *ngIf="!isSmallScreen" class="e-inherit hover:text-purple-600" content="{{item.text}}" cssClass="e-flat schedule-btn header-btn" ejs-button
-                      iconCss="{{item.iconCss}}"
-                      iconPosition="Left" [routerLink]="item.url" routerLinkActive="active">
-              </button>
-            </ng-container>
-            <button (select)="select($event)" [items]='items' class="e-inherit header-btn" content="{{username}}" ejs-dropdownbutton
-                    iconCss="e-ddb-icons e-profile"></button>
+
+            @if (username) {
+              <ng-container *ngFor="let item of scheduleItems">
+                <button *ngIf="!isSmallScreen" class="e-inherit hover:text-purple-600" content="{{item.text}}"
+                        cssClass="e-flat schedule-btn header-btn" ejs-button
+                        iconCss="{{item.iconCss}}"
+                        iconPosition="Left" [routerLink]="item.url" routerLinkActive="active">
+                </button>
+              </ng-container>
+
+                <button (select)="select($event)" [items]='items' class="e-inherit header-btn" content="{{username}}"
+                        ejs-dropdownbutton
+                        iconCss="e-ddb-icons e-profile"></button>
+
+            } @else {
+              <button routerLink="../auth/login" class="e-inherit header-btn" content="Login" routerLinkActive="active"
+                      ejs-button
+                      iconCss="e-ddb-icons e-profile"></button>
+            }
           </div>
         </ejs-appbar>
       </div>
