Adding a Schedule Cell Creation Item for an Admin

--- a/src/app/dashboard/admin/schedule-table-creator/schedule-table-creator.component.html
+++ b/src/app/dashboard/admin/schedule-table-creator/schedule-table-creator.component.html
@@ -39,6 +39,11 @@
                   ejs-button iconCss="e-icons e-copy"
                   iconPosition="Left" routerLink="subjects" routerLinkActive="active">
           </button>
+          <button *ngIf="!isSmallScreen" class="e-inherit hover:text-purple-600" content="Schedule cell"
+                  cssClass="e-flat schedule-btn header-btn"
+                  ejs-button iconCss="e-icons e-copy"
+                  iconPosition="Left" routerLink="schedule-cell" routerLinkActive="active">
+          </button>
         </div>
       </div>
     </div>
