Control of the user's role and bug fixes

--- a/src/app/dashboard/admin/schedule-table-creator/groups/groups.component.html
+++ b/src/app/dashboard/admin/schedule-table-creator/groups/groups.component.html
@@ -27,7 +27,7 @@
         <div class="form-row">
           <div class="form-group">
             <label for="departmentId">Department Name</label>
-            <ejs-dropdownlist (filtering)='onFiltering($event)' (valueChange)='onDepartmentChange($event)'
+            <ejs-dropdownlist (valueChange)='onDepartmentChange($event)'
                               [allowFiltering]='true'
                               [dataSource]='departments' [fields]="{text: 'name', value: 'id' }"
                               [filterBarPlaceholder]="filterPlaceholder"
