--- a/src/app/dashboard/admin/schedule-table-creator/schedule-table-creator.component.html
+++ b/src/app/dashboard/admin/schedule-table-creator/schedule-table-creator.component.html
@@ -41,7 +41,7 @@
           </button>
           <button *ngIf="!isSmallScreen" class="e-inherit hover:text-purple-600" content="Schedule cell"
                   cssClass="e-flat schedule-btn header-btn"
-                  ejs-button iconCss="e-icons e-copy"
+                  ejs-button iconCss="e-icons e-table"
                   iconPosition="Left" routerLink="schedule-cell" routerLinkActive="active">
           </button>
         </div>
