Adding button to save in own schedule, fixes

--- a/src/app/dashboard/schedule/schedule.component.html
+++ b/src/app/dashboard/schedule/schedule.component.html
@@ -207,7 +207,7 @@
         </ng-template>
         <ng-template #eventFooter let-data="data">
           <div class="e-event-footer">
-            <button #promptButton (click)="promptBtnClick()" [isPrimary]="true" class='dlgbtn' ejs-button>
+            <button #promptButton (click)="addToMySchedule()" [isPrimary]="true" class='dlgbtn' ejs-button>
               Add to my schedule
             </button>
           </div>
